# rust-playground

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
backup/: candle.rs  linfa.rs  polars.rs  scratch.rs
data/: output.parquet  sample.csv
src/: backend.rs.bak  main.rs
