[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
#actix-web = "4"
#polars = { version = "0.42.0", features = ["lazy"] }
linfa = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
linfa-trees = "0.7.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
